--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "eslint-plugin-jsx-a11y": "5.1.1",
     "eslint-plugin-react": "7.4.0",
     "extract-text-webpack-plugin": "3.0.2",
-    "file-loader": "1.1.5",
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
@@ -92,6 +91,7 @@
     "extends": "react-app"
   },
   "devDependencies": {
+    "file-loader": "^1.1.5",
     "node-sass": "^4.9.2",
     "sass-loader": "^7.0.3"
   }
