--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
+    "lodash-es": "^4.17.10",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
@@ -91,6 +92,7 @@
     "extends": "react-app"
   },
   "devDependencies": {
+    "babel-preset-env": "^1.7.0",
     "file-loader": "^1.1.5",
     "node-sass": "^4.9.2",
     "sass-loader": "^7.0.3"
