--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom"
+    "test": "node scripts/test.js --env=jsdom",
+    "prettier": "npx prettier --write src/**/*.js"
   },
   "jest": {
     "collectCoverageFrom": [
@@ -93,11 +94,15 @@
     ]
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": [
+      "react-app",
+      "prettier"
+    ]
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.2.0",
     "babel-preset-env": "^1.7.0",
+    "eslint-config-prettier": "^2.9.0",
     "node-sass": "^4.9.2",
     "prettier": "1.14.0",
     "sass-loader": "^7.0.3"
