--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "whatwg-fetch": "2.0.3"
   },
   "scripts": {
+  	"predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom",
@@ -103,8 +105,10 @@
     "@fortawesome/fontawesome-free": "^5.2.0",
     "babel-preset-env": "^1.7.0",
     "eslint-config-prettier": "^2.9.0",
+    "gh-pages": "^1.2.0",
     "node-sass": "^4.9.2",
     "prettier": "1.14.0",
     "sass-loader": "^7.0.3"
-  }
+  },
+  "homepage": "https://blbaylis.github.io/twitch-tv-tool"
 }
